[gd_scene load_steps=3 format=3 uid="uid://d0tfikihjgm6k"]

[ext_resource type="Theme" uid="uid://8bcavu88mft3" path="res://Themes/MainTheme.tres" id="1_byf4h"]
[ext_resource type="Script" path="res://Scenes/UI/TutorialPrompt.gd" id="2_oqq7i"]

[node name="TutorialPrompt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_byf4h")
script = ExtResource("2_oqq7i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368627, 0.368627, 0.368627, 0.839216)

[node name="PromptContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="PromptLabel" type="Label" parent="PromptContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Tutorial text goes here..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueLabel" type="Label" parent="PromptContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
text = "Tap to continue..."
horizontal_alignment = 1
vertical_alignment = 2
